--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 *.class
 /Programming 2/Labs/HelloWorld/nbproject/private/
 /Programming 2/Labs/HelloWorld/build/
+/Programming 2/Labs/Object Activation/JavaApplication2/nbproject/private/
+/Programming 2/Labs/Object Activation/Object_Activation/nbproject/private/
+/Programming 2/Labs/Object Activation/car_type1/nbproject/private/
+/Programming 2/Labs/Object Activation/car_type1/build/
+/Programming 2/Labs/Object Activation/car_type2/nbproject/private/
+/Programming 2/Labs/Object Activation/car_type2/build/
+/Programming 2/Labs/Object Activation/person_type1/nbproject/private/
+/Programming 2/Labs/Object Activation/person_type1/build/
