--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@
 /Programming 2/Labs/Object Activation/car_type2/build/
 /Programming 2/Labs/Object Activation/person_type1/nbproject/private/
 /Programming 2/Labs/Object Activation/person_type1/build/
+/Programming 2/Labs/OOP/PiggyBank/nbproject/private/
+/Programming 2/Labs/OOP/PiggyBank/build/
+/Programming 2/Labs/OOP/DigitalMenu/nbproject/private/
+/Programming 2/Labs/OOP/DigitalMenu/build/
