--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,14 @@
 /Programming 2/Labs/OOP/PiggyBank/build/
 /Programming 2/Labs/OOP/DigitalMenu/nbproject/private/
 /Programming 2/Labs/OOP/DigitalMenu/build/
+/Programming 2/Labs/OOP/Calculator/nbproject/private/
+/Programming 2/Labs/OOP/Calculator/build/
+/Programming 2/Labs/OOP/EMS/nbproject/private/
+/Programming 2/Labs/OOP/EMS/build/
+/Programming 2/Labs/OOP/GrammarVariable/nbproject/private/
+/Programming 2/Labs/OOP/GrammarVariable/build/
+/Programming 2/Labs/OOP/EMS/dist/
+/Programming 2/Labs/OOP/Diamond/nbproject/private/
+/Programming 2/Labs/OOP/Diamond/build/
+/Programming 2/Labs/Graphic Programming/graphic_ex/nbproject/private/
+/Programming 2/Labs/Graphic Programming/graphic_ex/build/
