--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@
 /Programming 2/Labs/OOP/Diamond/build/
 /Programming 2/Labs/Graphic Programming/graphic_ex/nbproject/private/
 /Programming 2/Labs/Graphic Programming/graphic_ex/build/
+/Programming 2/Labs/Applet/Applet_ex/nbproject/private/
+/Programming 2/Labs/Applet/Applet_ex/build/
