EMS functioning LoginFX ui working

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@
 /Programming 2/Labs/Graphic Programming/graphic_ex/build/
 /Programming 2/Labs/Applet/Applet_ex/nbproject/private/
 /Programming 2/Labs/Applet/Applet_ex/build/
+Programming 2/Employee Management System/out/production/Employee Management System/META-INF/Employee Management System.kotlin_module
