--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-
-*.json
 *.class
 /Programming 2/Labs/HelloWorld/nbproject/private/
 /Programming 2/Labs/HelloWorld/build/
@@ -29,3 +27,192 @@
 /Programming 2/Labs/Applet/Applet_ex/nbproject/private/
 /Programming 2/Labs/Applet/Applet_ex/build/
 Programming 2/Employee Management System/out/production/Employee Management System/META-INF/Employee Management System.kotlin_module
+Node.js/node-course/notes-app/node_modules/validator/CHANGELOG.md
+Node.js/node-course/notes-app/node_modules/validator/index.js
+Node.js/node-course/notes-app/node_modules/validator/LICENSE
+Node.js/node-course/notes-app/node_modules/validator/README.md
+Node.js/node-course/notes-app/node_modules/validator/validator.js
+Node.js/node-course/notes-app/node_modules/validator/validator.min.js
+Node.js/node-course/notes-app/node_modules/validator/es/index.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/alpha.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/blacklist.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/contains.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/equals.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/escape.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isAfter.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isAlpha.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isAlphanumeric.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isAscii.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isBase32.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isBase64.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isBefore.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isBIC.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isBoolean.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isBtcAddress.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isByteLength.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isCreditCard.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isCurrency.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isDataURI.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isDecimal.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isDivisibleBy.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isEAN.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isEmail.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isEmpty.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isEthereumAddress.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isFloat.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isFQDN.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isFullWidth.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isHalfWidth.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isHash.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isHexadecimal.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isHexColor.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isHSL.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isIBAN.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isIdentityCard.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isIn.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isInt.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isIP.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isIPRange.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isISBN.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isISIN.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isISO8601.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isISO31661Alpha2.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isISO31661Alpha3.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isISRC.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isISSN.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isJSON.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isJWT.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isLatLong.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isLength.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isLocale.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isLowercase.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isMACAddress.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isMagnetURI.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isMD5.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isMimeType.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isMobilePhone.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isMongoId.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isMultibyte.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isNumeric.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isOctal.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isPassportNumber.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isPort.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isPostalCode.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isRFC3339.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isRgbColor.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isSemVer.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isSlug.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isSurrogatePair.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isUppercase.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isURL.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isUUID.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isVariableWidth.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/isWhitelisted.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/ltrim.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/matches.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/normalizeEmail.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/rtrim.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/stripLow.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/toBoolean.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/toDate.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/toFloat.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/toInt.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/trim.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/unescape.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/whitelist.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/util/assertString.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/util/includes.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/util/merge.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/util/multilineRegex.js
+Node.js/node-course/notes-app/node_modules/validator/es/lib/util/toString.js
+Node.js/node-course/notes-app/node_modules/validator/lib/alpha.js
+Node.js/node-course/notes-app/node_modules/validator/lib/blacklist.js
+Node.js/node-course/notes-app/node_modules/validator/lib/contains.js
+Node.js/node-course/notes-app/node_modules/validator/lib/equals.js
+Node.js/node-course/notes-app/node_modules/validator/lib/escape.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isAfter.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isAlpha.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isAlphanumeric.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isAscii.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isBase32.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isBase64.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isBefore.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isBIC.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isBoolean.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isBtcAddress.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isByteLength.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isCreditCard.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isCurrency.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isDataURI.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isDecimal.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isDivisibleBy.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isEAN.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isEmail.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isEmpty.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isEthereumAddress.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isFloat.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isFQDN.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isFullWidth.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isHalfWidth.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isHash.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isHexadecimal.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isHexColor.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isHSL.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isIBAN.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isIdentityCard.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isIn.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isInt.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isIP.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isIPRange.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isISBN.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isISIN.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isISO8601.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isISO31661Alpha2.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isISO31661Alpha3.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isISRC.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isISSN.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isJSON.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isJWT.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isLatLong.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isLength.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isLocale.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isLowercase.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isMACAddress.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isMagnetURI.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isMD5.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isMimeType.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isMobilePhone.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isMongoId.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isMultibyte.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isNumeric.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isOctal.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isPassportNumber.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isPort.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isPostalCode.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isRFC3339.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isRgbColor.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isSemVer.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isSlug.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isSurrogatePair.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isUppercase.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isURL.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isUUID.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isVariableWidth.js
+Node.js/node-course/notes-app/node_modules/validator/lib/isWhitelisted.js
+Node.js/node-course/notes-app/node_modules/validator/lib/ltrim.js
+Node.js/node-course/notes-app/node_modules/validator/lib/matches.js
+Node.js/node-course/notes-app/node_modules/validator/lib/normalizeEmail.js
+Node.js/node-course/notes-app/node_modules/validator/lib/rtrim.js
+Node.js/node-course/notes-app/node_modules/validator/lib/stripLow.js
+Node.js/node-course/notes-app/node_modules/validator/lib/toBoolean.js
+Node.js/node-course/notes-app/node_modules/validator/lib/toDate.js
+Node.js/node-course/notes-app/node_modules/validator/lib/toFloat.js
+Node.js/node-course/notes-app/node_modules/validator/lib/toInt.js
+Node.js/node-course/notes-app/node_modules/validator/lib/trim.js
+Node.js/node-course/notes-app/node_modules/validator/lib/unescape.js
+Node.js/node-course/notes-app/node_modules/validator/lib/whitelist.js
+Node.js/node-course/notes-app/node_modules/validator/lib/util/assertString.js
+Node.js/node-course/notes-app/node_modules/validator/lib/util/includes.js
+Node.js/node-course/notes-app/node_modules/validator/lib/util/merge.js
+Node.js/node-course/notes-app/node_modules/validator/lib/util/multilineRegex.js
+Node.js/node-course/notes-app/node_modules/validator/lib/util/toString.js
